--- a/proto.css
+++ b/proto.css
@@ -1,19 +1,18 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:800');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:800");
 
 * {
   margin: 0;
-  padding: 0;  
+  padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
-body{
+body {
   background: #141212;
   color: #fff;
 }
@@ -27,11 +26,11 @@ body{
   background: #141212;
 }
 
-.container{
+.container {
   padding: 10px 10%;
 }
 
-nav{
+nav {
   background-color: #141212;
   display: flex;
   align-items: center;
@@ -42,20 +41,20 @@ nav{
   z-index: 1;
 }
 
-nav ul li{
+nav ul li {
   display: inline-block;
   list-style: none;
   margin: 10px 20px;
 }
 
-nav ul li a{
+nav ul li a {
   color: #ffff;
   text-decoration: none;
   font-size: 18px;
   position: relative;
 }
 
-nav ul li a::after{
+nav ul li a::after {
   content: "";
   width: 0;
   height: 3px;
@@ -66,76 +65,76 @@ nav ul li a::after{
   transition: 0.5s;
 }
 
-nav ul li a:hover::after{
+nav ul li a:hover::after {
   width: 100%;
 }
 
-.header-text{
+.header-text {
   margin-top: 5%;
 }
 
-.header-text p{
+.header-text p {
   display: none;
 }
 
-.header-text h1{
+.header-text h1 {
   font-size: 60px;
   margin-top: 150px;
   float: left;
 }
 
-.header-text h1 span{
+.header-text h1 span {
   color: #e31b59;
 }
 
-.header-text img{
+.header-text img {
   width: 25%;
-  border-radius: 15px; 
+  border-radius: 15px;
   margin-left: 150px;
   align-items: center;
 }
 
-#about{
+#about {
   padding: 80px 0;
   color: #ababab;
 }
 
-.row{
+.row {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
-.about-col-1{
+.about-col-1 {
   flex-basis: 35%;
 }
 
-.about-col-1 img{
+.about-col-1 img {
   width: 100%;
   border-radius: 15px;
 }
 
-.about-col-2{
+.about-col-2 {
   flex-basis: 60%;
   text-align: justify;
 }
 
-.about-col-2 img{
-  display: none ;
+.about-col-2 img {
+  display: none;
 }
 
-.sub-title{
+.sub-title {
   font-size: 60px;
   font-weight: 600;
   color: #fff;
 }
 
-.tab-titles{
+.tab-titles {
   display: flex;
   margin: 20px 0 40px;
 }
 
-.tab-links{
+.tab-links {
   margin-right: 50px;
   font-size: 18px;
   font-weight: 500;
@@ -143,7 +142,7 @@ nav ul li a:hover::after{
   position: relative;
 }
 
-.tab-links::after{
+.tab-links::after {
   content: "";
   width: 0;
   height: 3px;
@@ -154,40 +153,40 @@ nav ul li a:hover::after{
   transition: 0.5s;
 }
 
-.tab-links.active-link::after{
+.tab-links.active-link::after {
   width: 50%;
 }
 
-.tab-contents ul li{
+.tab-contents ul li {
   list-style: none;
   margin: 10px 0;
 }
 
-.tab-contents ul li span{
+.tab-contents ul li span {
   color: #eb4c7e;
   font-size: 14px;
 }
 
-.tab-contents{
+.tab-contents {
   display: none;
 }
 
-.tab-contents.active-tab{
+.tab-contents.active-tab {
   display: block;
 }
 
-#service{
+#service {
   padding: 30px 0;
 }
 
-.service-list{
+.service-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 40px;
   margin-top: 50px;
 }
 
-.service-list div{
+.service-list div {
   background-color: #262626;
   padding: 40px;
   font-size: 13px;
@@ -196,18 +195,18 @@ nav ul li a:hover::after{
   transition: background 0.3s, transform 0.5s;
 }
 
-.service-list div i{
+.service-list div i {
   font-size: 50px;
   margin-bottom: 30px;
 }
 
-.service-list div h2{
+.service-list div h2 {
   font-size: 30px;
   font-weight: 500;
   margin-bottom: 15px;
 }
 
-.service-list div a{
+.service-list div a {
   text-decoration: none;
   color: #fff;
   font-size: 12px;
@@ -215,36 +214,36 @@ nav ul li a:hover::after{
   display: inline-block;
 }
 
-.service-list div:hover{
+.service-list div:hover {
   background: #e31b59;
   transform: translateY(-10px);
 }
 
-#portofolio{
+#portofolio {
   padding: 50px 0;
 }
 
-.work-list{
+.work-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 40px;
   margin-top: 50px;
 }
 
-.work{
+.work {
   border-radius: 10px;
   position: relative;
   overflow: hidden;
 }
 
-.work h4{
+.work h4 {
   display: flex;
   justify-content: center;
   align-items: center;
   padding-top: 20px;
 }
 
-.work img{
+.work img {
   width: 100%;
   height: 400px;
   border-radius: 10px;
@@ -252,10 +251,10 @@ nav ul li a:hover::after{
   transition: transform 0.5s;
 }
 
-.layer{
+.layer {
   width: 100%;
   height: 0%;
-  background: linear-gradient(rgba(0,0,0,0,6), #e31b59);
+  background: linear-gradient(rgba(0, 0, 0, 0, 6), #e31b59);
   border-radius: 10px;
   position: absolute;
   left: 0;
@@ -271,12 +270,12 @@ nav ul li a:hover::after{
   transition: height 0.5s;
 }
 
-.layer h3{
+.layer h3 {
   font-weight: 500;
   margin-bottom: 20px;
 }
 
-.layer a{
+.layer a {
   margin-top: 20px;
   color: #e31b59;
   text-decoration: none;
@@ -288,11 +287,11 @@ nav ul li a:hover::after{
   text-align: center;
 }
 
-.work:hover img{
+.work:hover img {
   transform: scale(1.1);
 }
 
-.work:hover .layer{
+.work:hover .layer {
   height: 100%;
 }
 
@@ -308,33 +307,33 @@ nav ul li a:hover::after{
   transition: background 0.5s;
 }
 
-.btn:hover{
+.btn:hover {
   background: #e31b59;
 }
 
-.contact-left{
+.contact-left {
   flex-basis: 35%;
 }
 
-.contact-right{
+.contact-right {
   flex-basis: 60%;
 }
 
-.contact-left p{
+.contact-left p {
   margin-top: 30px;
 }
 
-.contact-left p i{
+.contact-left p i {
   color: #e31b59;
   margin-right: 15px;
   font-size: 25px;
 }
 
-.social-icons{
+.social-icons {
   margin-top: 30px;
 }
 
-.social-icons a{
+.social-icons a {
   text-decoration: none;
   font-size: 30px;
   margin-right: 15px;
@@ -343,26 +342,103 @@ nav ul li a:hover::after{
   transition: transform 0.5s;
 }
 
-.social-icons a:hover{
+.social-icons a:hover {
   color: #e31b59;
   transform: translateY(-5px);
 }
 
-.btn.btn2{
+.btn.btn2 {
   display: inline-block;
   background: #e31b59;
 }
 
-.contact-right form{
+.contact-right form {
   width: 100px;
 }
 
-form input, form textarea{
+/* Bagian Project Cards */
+.project-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.project-card {
+  border-radius: 10px;
+  padding: 20px;
+  margin-bottom: 50px;
+  text-align: center;
+  flex: 1 1 calc(33% - 40px);
+  max-width: calc(33% - 40px);
+}
+
+.project-card img {
+  width: 100%;
+  height:fit-content;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.project-card h2 {
+  font-size: 20px;
+  margin: 15px 0;
+}
+
+.project-card p {
+  font-size: 14px;
+  color: #555;
+  margin-bottom: 15px;
+}
+
+.project-card .btn1 {
+  display: inline-block;
+  padding: 8px 12px;
+  background-color: #e31b59;
+  color: #fff;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.project-card .btn1:hover {
+  background-color: #404040;
+  transition-duration: 0.1s;
+}
+
+/* Bagian Sertifikasi */
+.certification-list {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-top: 20px;
+}
+
+.certification-card {
+  background: #f0f0f0;
+  padding: 15px 20px;
+  border-left: 5px solid #007bff;
+  border-radius: 5px;
+}
+
+.certification-card h2 {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.certification-card p {
+  font-size: 14px;
+  color: #666;
+}
+
+form input,
+form textarea {
   width: 650px;
   border: 0;
   outline: none;
   background: #1d1d1d;
-  padding:15px;
+  padding: 15px;
   margin: 15px 0;
   color: #fff;
   font-size: 18px;
@@ -380,7 +456,7 @@ form .btn2 {
   width: 100%;
   text-align: center;
   padding: 25px 0;
-  background:#1d1d1d;
+  background: #1d1d1d;
   font-weight: 300;
 }
 
@@ -392,51 +468,31 @@ nav .fa-solid {
   display: none;
 }
 
-.loader{
+.loader {
   width: 120px;
   height: 150px;
   background-color: #fff;
   background-repeat: no-repeat;
-  background-image: 
-    linear-gradient(#ddd 50%, #bbb 51%),
-    linear-gradient(#ddd, #ddd),
-    linear-gradient(#ddd, #ddd),
-    radial-gradient(ellipse at center,
-    #aaa 25%, 
-    #eee 26%,
-    #eee 50%, 
-    #0000 55%),
-    radial-gradient(ellipse at center,
-    #aaa 25%,
-    #eee 26%,
-    #eee 50%, 
-    #0000 55%)
-    radial-gradient(ellipse at center,
-    #aaa 25%,
-    #eee 26%,
-    #eee 50%, 
-    #0000 55%);
-  background-position: 
-      0 20px,
-      45px 0,
-      8px 6px,
-      55px 3px,
-      75px 3px,
-      95px 3px;
-  background-size: 
-    100% 4px,
-    1px 23px,
-    30px 8px,
-    15px 15px,
-    15px 15px,
-    15px 15px;
+  background-image: linear-gradient(#ddd 50%, #bbb 51%),
+    linear-gradient(#ddd, #ddd), linear-gradient(#ddd, #ddd),
+    radial-gradient(ellipse at center, #aaa 25%, #eee 26%, #eee 50%, #0000 55%),
+    radial-gradient(ellipse at center, #aaa 25%, #eee 26%, #eee 50%, #0000 55%)
+      radial-gradient(
+        ellipse at center,
+        #aaa 25%,
+        #eee 26%,
+        #eee 50%,
+        #0000 55%
+      );
+  background-position: 0 20px, 45px 0, 8px 6px, 55px 3px, 75px 3px, 95px 3px;
+  background-size: 100% 4px, 1px 23px, 30px 8px, 15px 15px, 15px 15px, 15px 15px;
   position: relative;
   border-radius: 6%;
   animation: shake 3s ease-in-out infinite;
   transform-origin: 60px 180px;
 }
 
-.loader:before{
+.loader:before {
   content: "";
   position: absolute;
   width: 7px;
@@ -448,7 +504,7 @@ nav .fa-solid {
   box-shadow: 102px 0 #aaa;
 }
 
-.loader:after{
+.loader:after {
   content: "";
   position: absolute;
   width: 95px;
@@ -458,34 +514,31 @@ nav .fa-solid {
   margin: auto;
   bottom: 20px;
   background-color: #bbdefb;
-  background-image: 
-    linear-gradient(to right,
+  background-image: linear-gradient(
+      to right,
       #0004 0%,
       #0004 49%,
       #0000 50%,
-      #0000 100%),
-    linear-gradient(135deg,
-      #64b5f6 50%,
-      #607d8b 51%);
+      #0000 100%
+    ),
+    linear-gradient(135deg, #64b5f6 50%, #607d8b 51%);
   background-size: 30px 100%, 90px 80px;
   background-repeat: repeat, no-repeat;
   background-position: 0 0;
   border-radius: 50%;
   box-sizing: border-box;
   border: 10px solid #ddd;
-  box-shadow: 
-      0 0 0 4px #999 inset,
-      0 0 6px 6px #0004 inset;
+  box-shadow: 0 0 0 4px #999 inset, 0 0 6px 6px #0004 inset;
   animation: spin 3s ease-in-out infinite;
 }
 
-.p{
+.p {
   display: flex;
   justify-content: center;
   padding-left: 20px;
 }
 
-@keyframes spin{
+@keyframes spin {
   0% {
     transform: rotate(0deg);
   }
@@ -501,7 +554,6 @@ nav .fa-solid {
 }
 
 @keyframes shake {
-  
   65%,
   80%,
   88%,
@@ -524,73 +576,74 @@ nav .fa-solid {
 }
 
 @media screen and (max-width: 600px) {
-  .header-text{
+  .header-text {
     margin-top: 50%;
     margin-bottom: 75%;
   }
-  .header-text p{
+  .header-text p {
     display: block;
   }
-  .header-text img{
+  .header-text img {
     display: none;
   }
-  .header-text h1{
+  .header-text h1 {
     font-size: 30px;
     float: none;
     margin-top: 10px;
   }
   nav .fa-solid {
     display: block;
-    font-size:25px;
+    font-size: 25px;
   }
-  nav ul{
+  nav ul {
     background: #e31b59;
     position: fixed;
     top: 0;
     right: -200px;
-    width: 200px; 
+    width: 200px;
     height: 120vh;
     padding-top: 50px;
     z-index: 2;
     transition: right 0.5s;
   }
-  nav ul:hover{
+  nav ul:hover {
     color: #141212;
     transition: 1s;
   }
   nav ul li {
-    display:block;
+    display: block;
     margin: 25px;
   }
-  nav ul li a:hover{
+  nav ul li a:hover {
     color: #141212;
     transition: 0.1s;
     font-weight: 700;
   }
-  nav ul .fa-solid{
+  nav ul .fa-solid {
     position: absolute;
-    top:25px;
+    top: 25px;
     left: 25px;
     cursor: pointer;
   }
-  .sub-title{
+  .sub-title {
     font-size: 40px;
     padding-bottom: 10px;
   }
-  .about-col-1,.about-col-2{
+  .about-col-1,
+  .about-col-2 {
     flex-basis: 100%;
   }
-  .about-col-1{
+  .about-col-1 {
     margin-bottom: 30px;
   }
-  .about-col-1 img{
+  .about-col-1 img {
     display: none;
   }
-  .about-col-2{
+  .about-col-2 {
     font-size: 14px;
     padding-bottom: 0;
   }
-  .about-col-2 img{
+  .about-col-2 img {
     display: block;
     width: 100%;
     padding-top: 10px;
@@ -599,13 +652,14 @@ nav .fa-solid {
   }
   .tab-links {
     font-size: 16px;
-    margin-right: 20px;  
+    margin-right: 20px;
   }
   .contact-left,
   .contact-right {
     flex-basis: 100%;
   }
-  form input, form textarea{
+  form input,
+  form textarea {
     width: 290px;
   }
   .copyright {
