--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -17,21 +17,14 @@ body {
   color: #fff;
 }
 
-.body2 {
-  height: 100vh;
-  margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #141212;
-}
-
 .container {
   padding: 10px 10%;
 }
 
 nav {
-  background-color: #141212;
+  background: rgba(0, 0, 0, 0.1); /* Transparan */
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -41,16 +34,20 @@ nav {
   z-index: 1;
 }
 
+nav img {
+  margin: 10px 40px;
+}
+
 nav ul li {
   display: inline-block;
   list-style: none;
-  margin: 10px 20px;
+  margin: 10px 40px;
 }
 
 nav ul li a {
   color: #ffff;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 14px;
   position: relative;
 }
 
@@ -169,6 +166,8 @@ nav ul li a:hover::after {
 
 .tab-contents {
   display: none;
+  text-align: left;
+  padding-top: 10px;
 }
 
 .tab-contents.active-tab {
@@ -223,77 +222,6 @@ nav ul li a:hover::after {
   padding: 50px 0;
 }
 
-.work-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 40px;
-  margin-top: 50px;
-}
-
-.work {
-  border-radius: 10px;
-  position: relative;
-  overflow: hidden;
-}
-
-.work h4 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 20px;
-}
-
-.work img {
-  width: 100%;
-  height: 400px;
-  border-radius: 10px;
-  display: block;
-  transition: transform 0.5s;
-}
-
-.layer {
-  width: 100%;
-  height: 0%;
-  background: linear-gradient(rgba(0, 0, 0, 0, 6), #e31b59);
-  border-radius: 10px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 0 40px;
-  text-align: center;
-  font-size: 14px;
-  transition: height 0.5s;
-}
-
-.layer h3 {
-  font-weight: 500;
-  margin-bottom: 20px;
-}
-
-.layer a {
-  margin-top: 20px;
-  color: #e31b59;
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 60px;
-  background: #fff;
-  width: 60px;
-  border-radius: 50%;
-  text-align: center;
-}
-
-.work:hover img {
-  transform: scale(1.1);
-}
-
-.work:hover .layer {
-  height: 100%;
-}
 
 .btn {
   display: block;
